feat: production audit + QR flow rebuild + soft-delete + notifications UX
Bundles the cumulative work from audit Phases 3-12. Summary:

Security (Phase 3, 8, 9, 11):
- Removed hardcoded master-admin backdoor in AuthController
- Moved DB password + JWT secret to env vars (application-local.properties
  override, gitignored). Added DataSourceFailureAnalyzer for cryptic ORA-01017
- New PasswordPolicyValidator (12-char min, denylist) on RegisterRequest
- New RateLimitingFilter (Bucket4j) on /login, /register, QR endpoints, etc
- AuthTokenFilter now returns 401 JSON instead of silent failure
- CORS now supports allowedOriginPatterns for mobile-on-LAN scanning
- QR /validate + /submit endpoints rewired to be PUBLIC with inline staff
  authentication (signed token + staff email/password in body)
- Master-key removal regression-guarded by NoMasterKeyRegressionTest

Database (Phase 4-7, Phase 12):
- 22 perf indexes added (oracle-schema-indexes.sql + Flyway V2)
- Schema hardening migration V3 (CHECK constraints, version columns, FK fixes)
  via Flyway, disabled by default for Oracle 21c due to Community Edition gap
- Soft-delete column on Request (deleted_at) and Notification (cleared_at)
- ddl-auto=update handles column addition automatically

QR flow (Phase 11, Phase 12):
- Frontend verify-donation page is now fully public, no localStorage gate
- QR URL uses publicBaseUrl() with VITE_PUBLIC_BASE_URL priority + warning
  toast if dashboard is on localhost (phone unreachable)
- Verify-legacy-redirect page catches old /verify.html?v=N URLs gracefully
- run-project.bat now exports VITE_PUBLIC_BASE_URL automatically

Business logic (Phase 9):
- Pessimistic locks on Request + QRVerificationToken (race-condition fix)
- Eligibility gate on acceptRequest (no acceptance without recent assessment)
- RequestStateMachine enforces status transitions
- Hospital staff notifications on new requests
- EAGER -> LAZY on User.hospital and Request.user/hospital/matchedDonor +
  @EntityGraph for 